Added Concentration Dashboard as submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Concentration-Messurement"]
 	path = deps/Concentration-Messurement
 	url = https://github.com/DooomiT/Concentration-Messurement
+[submodule "Concentration-Dashboard"]
+	path = deps/Concentration-Dashboard
+	url = https://github.com/DooomiT/Concentration-Dashboard
